--- a/src/lang/fin.json
+++ b/src/lang/fin.json
@@ -1,7 +1,7 @@
 {
   "welcome": "Tervetuloa",
   "navMainPage": "Etusivu",
-  "speedIsImportant": "Nopeus on tärkeä!",
+  "speedIsImportant": "Nopeus on tärkein!",
   "receiver": "Etsin palvelua",
   "provider": "Tarjoan palvelua"
 }
