--- a/src/lang/fin.json
+++ b/src/lang/fin.json
@@ -4,5 +4,31 @@
   "speedIsImportant": "Nopeus on tärkein!",
   "receiver": "Etsin palvelua",
   "provider": "Tarjoan palvelua",
+  "nav_accessRestricted": "Käyttö päättynyt!",
+
+  "nav_accessFewDays_usage": "Käyttö",
+  "nav_accessFewDays_dayCount": "päivää",
+
+  "nav_loadTime": "Lataa lisää aikaa!",
+
+  "nav_user_profile": "Omat tiedot",
+  "nav_user_history": "Arkisto",
+  "nav_user_orders": "Tilaukset",
+  "nav_user_gallery": "Galleria",
+  "nav_user_billing": "Laskutus",
+  "nav_user_rules": "Säänöt",
+  "nav_logout": "Kirjaudu ulos",
+  "nav_newMessage": "Uusi!",
+
+  "receiver_form_offersOrQuickSolution": "Täytä tilaus tarjousten varten tai löytää nopea ratkaisu kartalta!",
+  "receiver_form_getProfessional": "Valitse ammattilainen",
+  "receiver_form_enterOrderKeyword": "Syötä tilauksen avainsana",
+  "receiver_form_selectDesiredRegion": "Valitse haluamasi alue",
+  "receiver_form_whenProNeeded": "Mihin aikaan tarvitset ammattilaista?",
+  "receiver_form_orderContentsDescription": "Kuvaus tilauksen sisällöstä...",
+  "receiver_form_orderContentImage": "Valitse kuva",
+  "receiver_form_orderContentImageEdit": "Muokkaa kuva",
+  "receiver_form_createAnOrder": "Luo tilaus",
+
   "offerCountNotification": "tarjousta"
 }
