--- a/src/lang/fin.json
+++ b/src/lang/fin.json
@@ -1,7 +1,7 @@
 {
   "welcome": "Tervetuloa",
   "navMainPage": "Etusivu",
-  "speedIsImportant": "Nopeus on tärkein!",
+  "speedIsImportant": "Nopea ratkaisu!",
   "receiver": "Etsin palvelua",
   "provider": "Tarjoan palvelua",
   "nav_accessRestricted": "Käyttö päättynyt!",
