--- a/src/lang/est.json
+++ b/src/lang/est.json
@@ -9,7 +9,10 @@
   "nav_accessFewDays_dayCount": "päeva",
   "nav_loadTime": "Laadige rohkem aega!",
 
+  "nav_sign_in": "Kirjuta sisse",
+  "nav_user_messages": "Teated",
   "nav_user_profile": "Profiil",
+  "nav_user_manual": "Kasutusjuhend",
   "nav_user_history": "Ajalugu",
   "nav_user_orders": "Tellimused",
   "nav_user_gallery": "Galerii",
@@ -28,5 +31,25 @@
   "receiver_form_orderContentImageEdit": "Muuda pilti",
   "receiver_form_createAnOrder": "Loo tellimus",
 
-  "offerCountNotification": "pakkumist"
+  "recipient_panel_confirmed_orders": "Kinnitatud telliused",
+  "recipient_panel_you_have": "Sinul on",
+  "offerCountNotification": "pakkumist",
+  "recipient_panel_open_orders": "avatut tellimust",
+  "recipient_panel_order_is_pending": "Tellimus on ootel kui pro kinnitab selle",
+  "recipient_panel_no_offers": "Veel ei ole pakkumisi",
+  "recipient_panel_quit_order": "Kustuta tellimus",
+  "recipient_panel_give_reason": "Anna põhjus...",
+  "recipient_panel_confirm_quit": "Kinnita tellimuse kustutamine",
+  "recipient_panel_new_order": "Tee uus tellimus",
+
+  "recipient_result_need_a_pro": "Vajan professionaali",
+  "recipient_result_order_is_expired": "Tellimus on vananenud. Muuda tellimuse päeva / aega või kustuta tellimus!",
+  "recipient_result_edit_description": "Muuda tellimuse kirjeldust...",
+  "recipient_result_edit_date": "Muuda aega",
+  "recipient_result_select_date": "Vali sobiv aeg...",
+  "recipient_result_edit_picture": "Muuda pilti",
+  "recipient_result_edit_order_picture": "Muuda tellimuse pilti",
+  "recipient_result_select_new_image": "Vali uus tellimuse pilt"
+
+
 }
