--- a/src/lang/fin.json
+++ b/src/lang/fin.json
@@ -39,7 +39,8 @@
   "recipient_panel_open_orders": "avointa tilausta",
   "recipient_panel_order_is_pending": "Tilaus on vierellä kun tarjoajaa vahvista sen",
   "recipient_panel_no_offers": "Ei vielä tarjouksia",
-  "recipient_panel_quit_order": "Keskeyttää tilaus",
+  "recipient_panel_quit_order": "Keskeyttä tilaus",
+  "recipient_panel_order": "Tilaus",
   "recipient_panel_give_reason": "Anna syy...",
   "recipient_panel_confirm_quit": "Varmistaa tilauksen poisto",
   "recipient_panel_new_order": "Tee uusi tilaus",
