--- a/src/lang/est.json
+++ b/src/lang/est.json
@@ -46,7 +46,7 @@
   "recipient_result_need_a_pro": "Vajan professionaali",
   "recipient_result_order_is_expired": "Tellimus on vananenud. Muuda tellimuse päeva / aega või kustuta tellimus!",
   "recipient_result_edit_description": "Muuda tellimuse kirjeldust...",
-  "recipient_result_edit_date": "Muuda aega",
+  "recipient_result_edit_date": "Muuda tellimuse kuupäeva ja kellaaega",
   "recipient_result_select_date": "Vali sobiv aeg...",
   "recipient_result_edit_picture": "Muuda pilti",
   "recipient_result_edit_order_picture": "Muuda tellimuse pilti",
